[package]
name = "ckb-alt-bn128-compatible"
version = "0.1.6"
edition = "2024"
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Parity Technologies <admin@parity.io>", "Mohanson <mohanson@outlook.com>"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing", "crypto", "cryptography"]
homepage = "https://github.com/mohanson-fork/ckb-alt-bn128"
repository = "https://github.com/mohanson-fork/ckb-alt-bn128"
license = "MIT OR Apache-2.0"

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true

[dependencies]

[build-dependencies]
cc = "1"
